--- a/index.html
+++ b/index.html
@@ -4,8 +4,10 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>qianzhu</title>
+    <style>
+    </style>
   </head>
-  <body>
+  <body style="margin:0">
     <div id="app"></div>
     <!-- built files will be auto injected -->
   </body>
